[package]
name = "weehok-scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
aho-corasick = "1.1"
base64 = "0.22"
crossbeam-channel = "0.5"
flate2 = "1.0"
num_cpus = "1.17"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
walkdir = "2.5"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_Diagnostics_Debug", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Memory", "Win32_System_Threading"] }
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
